# jvideo

./: .gitignore  CMakeLists.txt  README.md
cmake/templates/: dllmain.cpp.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/MultiVideoCapture/: CMakeLists.txt  FrameType.cpp  FrameType.hpp  MultiVideoCapture.cpp  MultiVideoCapture.hpp  ThreadPool.hpp  VideoCaptureType.cpp  VideoCaptureType.hpp  main.cpp
src/app/MultiVideoCapture_test/: CMakeLists.txt  main.cpp
src/app/VideoRecord/: CMakeLists.txt  FrameGrab.cpp  FrameGrab.h  FrameQueue.cpp  FrameQueue.h  FrameRecord.cpp  FrameRecord.h  VideoRecord.cpp  VideoRecord.h  VideoResolution.h  main.cpp
src/app/VideoRecord_gui/: CMakeLists.txt  VideoRecord_gui.cpp  VideoRecord_gui.h  VideoRecord_gui.ui  main.cpp
src/lib/: CMakeLists.txt
src/lib/MultiVideoCapture/: CMakeLists.txt  FrameType.cpp  FrameType.hpp  MultiVideoCapture.cpp  MultiVideoCapture.hpp  ThreadPool.hpp  VideoCaptureType.cpp  VideoCaptureType.hpp
src/lib/OpenCVDeviceEnumerator/: CMakeLists.txt
src/lib/getopt/: CMakeLists.txt  getopt.c  getopt.h
