

# list sources files
FILE(GLOB OPENCV_DEVICE_ENUMERATOR_SRC "./*.c*")
FILE(GLOB OPENCV_DEVICE_ENUMERATOR_HDR "./*.h*")
list(REMOVE_ITEM OPENCV_DEVICE_ENUMERATOR_SRC "${CMAKE_CURRENT_SOURCE_DIR}/./OpenCVDeviceEnumerator.cpp")

ADD_LIBRARY(OpenCVDeviceEnumerator
	${OPENCV_DEVICE_ENUMERATOR_SRC}
	${OPENCV_DEVICE_ENUMERATOR_HDR}
	)
